# banner

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
banner-engine/: Cargo.toml
banner-engine/src/: engine.rs  event_handler.rs  event_handlers.rs  events.rs  execution_status.rs  lib.rs  listen_for_events.rs  metadata.rs  pipeline.rs  pragma.rs  rune_engine.rs  select.rs  tasks.rs
banner-engine/src/event_handlers/: job.rs  pipeline.rs  task.rs
banner-engine/test_data/build_pipeline_tests/: can_parse_banner_pipeline.expect  can_parse_job_macro.expect  can_parse_task_with_comment.expect  can_parse_uri.expect
banner-engine/test_data/event_handler_creation_tests/: test_job_with_multiple_tasks.expect  test_job_with_single_task.expect  test_multi_job_pipeline.expect  test_simple_pipeline_with_job_and_task.expect  test_single_job_pipeline.expect  test_two_job_pipeline.expect
banner-engine/tests/: event_sync_tests.rs
banner-parser/: Cargo.toml
banner-parser/src/: ast.rs  errors.rs  grammar.rs  image_ref.rs  lib.rs  parser.rs
banner-parser/src/grammar/: banner.pest  image_ref.pest
cli/: Cargo.toml
cli/src/: main.rs  ui.rs
cli/src/ui/: pipeline.rs  state.rs  terminal.rs
cli/src/ui/pipeline/: job.rs  pipeline.rs  pipeline_metadata.rs  widget.rs
engine-contract/: Cargo.toml
engine-contract/src/: lib.rs
examples/: entirely_wrong.ban  script.sh  single_task.ban  single_task_with_tags.ban
k8s-engine/: Cargo.toml
local-engine/: Cargo.toml
local-engine/src/: lib.rs  tag_missing_error.rs
local-engine/tests/: requirements_tests.rs
pipeline-assets/: banner-pipeline-get-only.ban  banner-pipeline-multiple-jobs.ban  banner-pipeline-no-vars.ban  banner-pipeline.ban  echo_task.ban  jobs_before_tasks.ban
test-engine/: Cargo.toml
test-engine/src/: ast.rs  engine.rs  grammar.rs  lib.rs
test-engine/src/grammar/: pragma.pest
test-pipelines/: jobs_before_tasks.ban  minimal.ban  multiple-jobs-sequential.ban  multiple-jobs.ban  no-vars.ban
tests/: Cargo.toml  test_engine.rs
tree-sitter/: Dockerfile  README.md  docker-compose.yaml
tree-sitter/tree-sitter-banner/: Cargo.toml  binding.gyp  example-file  grammar.js  package-lock.json  package.json
tree-sitter/tree-sitter-banner/bindings/node/: binding.cc  index.js
tree-sitter/tree-sitter-banner/bindings/rust/: lib.rs
tree-sitter/tree-sitter-banner/src/: grammar.json  node-types.json  parser.c  scanner.c
