[workspace]

members = ["cli", "banner-engine", "k8s-engine", "local-engine", "banner-parser"]
resolver = "2"

[workspace.dependencies]
async-trait = "*"
pest = "2.6"
pest_derive = "2.6"
pest-ast = "0.3"
from-pest = "0.3"
log = "0.4"
tokio = {version = "1.25", features = ["test-util", "macros"]}
futures = "*"
futures-util = "*"

# dev dependencies
expect-test = "1.4.0"
tracing = "0.1"
tracing-test = "0.2.4"
