[package]
name = "banner-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "local"
description = "The contract for Banner engines to conform to."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
chrono = "0.4"
semver = "*"
log = "0.4"
banner-parser = { path = "../banner-parser" }
tokio = "*"