[package]
name = "banner-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "https://github.com/rustl3rs/banner"
description = "The contract for Banner engines to conform to."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner-parser = { path = "../banner-parser" }

async-trait = {workspace = true}
log = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

rune = "0.12.4"
rune-modules = "0.12.4"
hyper = { version = "*", features = ["client", "http2", "http1"] }
hyper-tls = "*"
const_format = "0.2.30"
serde = "*"
itertools = "*"
strum = "*"
strum_macros = "*"
chrono = "0.4"
semver = "*"

[dev-dependencies]
expect-test = {workspace = true}
tracing-test = {workspace = true}
