[package]
name = "banner"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "https://github.com/rustl3rs/banner"
description = "The Banner CLI. Used to ship pipelines to Banner servers and to run pipelines locally."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner-engine = { path = "../banner-engine" }
local-engine = { path = "../local-engine" }

tracing = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
futures-util = {workspace = true}

clap = { version = "4", features = ["derive"] }
ratatui = "0.24"
crossterm = {version = "0.27", features = ["event-stream"]}
tui-logger = {git = "https://github.com/gin66/tui-logger.git", features = ["crossterm", "tracing-support"]}
futures-timer = "3.0"
futures-core = "0.3"
async-recursion = "1.0.5"
