[package]
name = "k8s-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "local"
description = "A Kubernetes engine for Banner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
