[package]
name = "local-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery"]
readme = "README.md"
repository = "local"
description = "A local engine for Banner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner-engine = { path = "../banner-engine" }
cap-tempfile = "1.0"
bollard = "0.14"
tokio = {version = "1.25", features = ["test-util", "macros"]}
async-trait = "*"
futures-util = "*"
tracing = {workspace = true}

[features]
default = ["docker"]
docker = []
