[package]
name = "local-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery"]
readme = "README.md"
repository = "local"
description = "A local engine for Banner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
banner-parser = { path = "../banner-parser" }
banner-engine = { path = "../banner-engine" }
bollard = "0.14"
cap-tempfile = "1.0"
futures = "*"
futures-util = "*"
tokio = {version = "1.25", features = ["test-util", "macros"]}
tracing = {workspace = true}
log = "0.4"
backon = "0.4"

[features]
default = ["docker"]
docker = []
