[package]
name = "local-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery"]
readme = "README.md"
repository = "https://github.com/rustl3rs/banner"
description = "A local engine for Banner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner-engine = { path = "../banner-engine" }

async-trait = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
log = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true}

bollard = "0.14"
cap-tempfile = "1.0"
backon = "0.4"
rand = "*"

[features]
default = ["docker"]
docker = []
