[package]
name = "test-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "https://github.com/rustl3rs/banner"
description = "A test engine for Banner."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
banner-engine = { path = "../banner-engine" }
local-engine = { path = "../local-engine" }
