[package]
name = "test-engine"
version = "0.0.1"
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["CICD"]
edition = "2021"
keywords = ["ci", "continuous", "integration", "deployment", "delivery",]
readme = "README.md"
repository = "https://github.com/rustl3rs/banner"
description = "A test engine for Banner."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner-engine = { path = "../banner-engine" }
local-engine = { path = "../local-engine" }

tokio = {workspace = true}
async-trait = {workspace = true}

tracing = {workspace = true}
log = {workspace = true}

pest = {workspace = true}
pest_derive = {workspace = true}
pest-ast = {workspace = true}
from-pest = {workspace = true}

[dev-dependencies]
expect-test = {workspace = true}
tracing-test = {workspace = true}
